syntax = "proto3";

package vocation;

option go_package = "./pkg/proto/pb";

message Vocation{
    uint64 VocID = 4;
    uint64 UserID = 1;
    string StartTime = 2;
    string EndTime = 3;
}

service VocationService{
    rpc Add (AddVocationRequest) returns (Response);
    rpc Delete (DeleteVocationRequest) returns (Response);
}
message DeleteVocationRequest{
    uint64 UserID = 1; 
}
message AddVocationRequest{
    Vocation vocation = 1;
}

message Response{
    string Error = 1;
    int64 Status = 2;
}
